# pytest_parallel

./: .gitignore  CMakeLists.txt  README.md  README.rst  __unused.py  pyproject.toml  pytest_mpi_check.py  pytest_slurm.sh  run.sh  setup.py  source.sh  tox.ini
.github/workflows/: test.yml
.slurm_draft/: master.py
.slurm_draft/draft_0_subprocess_auto_join/: master.py
.slurm_draft/draft_1_sockets/: socket_utils.py
.slurm_draft/draft_2_srun/: master_multi_node.sh  master_simple.sh  slurm_job.sh  slurm_mpi_job.sh  worker.sh
.slurm_draft/draft_3_sockets_ip/: machine_conf.py  master.py  worker.py
.socket_draft/: socket_utils.py  worker.py
.socket_draft/draft_2_srun/: master_1p.sh  worker.py
.socket_draft/draft_3_sockets_ip/: job_worker.sh  master.py  socket_utils.py  worker.py
doc/images/: pytest_parallel_sequence_diag.pptx
docs/: conf.py  index.rst
pytest_mpi_check/: __init__.py  _decorator.py  html_mpi.py  junit_mpi.py  mark.py  mpi_reporter.py  plugin.py  utils.py
pytest_parallel/: __init__.py  algo.py  exception.py  fixtures.py  gather_report.py  html_mpi.py  junit_mpi.py  mark.py  mpi_reporter.py  plugin.py  process_scheduler.py  process_worker.py  py.typed  pytest_parallel.py  send_report.py  separated_static_scheduler.py  shell_static_scheduler.py  slurm_scheduler.py  socket_utils.py  static_scheduler_utils.py  terminal_reporter_mpi.py  utils.py
pytest_parallel/test/: example_regex.py  test_algo.py  test_utils.py
pytest_parallel/utils/: file.py  items.py  mpi.py  socket.py
slurm/: hello_mpi.cpp  master.py  master.sh  master_no_exclusive.sh  run.sh  slurm_impi.sh  worker.py  worker.sh
slurm/draft_0_subprocess_auto_join/: worker.py
slurm/draft_1/: master.py
slurm/draft_2_srun/: master_1p_no_exclusive.sh
slurm/draft_3_sockets_ip/: master.py  worker.py
test/: test_pytest_parallel.py  test_pytest_parallel_extra.py
test/pytest_parallel_refs/: terminal_fail_complex_assert_two_procs  terminal_fixture  terminal_fixture_error  terminal_parametrize  terminal_scheduling  terminal_seq  terminal_success_0_fail_1  terminal_two_fail_tests_one_proc  terminal_two_fail_tests_two_procs  terminal_two_fail_tests_two_procs_skip  terminal_two_success_fail_tests_two_procs  terminal_two_success_tests_one_proc  terminal_two_success_tests_two_procs  terminal_two_success_tests_two_procs_skip
test/pytest_parallel_tests/: test_crash_reporting.py  test_doc_example.py  test_fail_complex_assert_two_procs.py  test_fixture.py  test_fixture_error.py  test_parametrize.py  test_scheduling.py  test_seq.py  test_success_0_fail_1.py  test_two_fail_tests_one_proc.py  test_two_fail_tests_two_procs.py  test_two_success_fail_tests_two_procs.py  test_two_success_tests_one_proc.py  test_two_success_tests_two_procs.py
tests/: run_tests.sh  test_.py  test_1.py  test_fixture_error.py  test_mpi_check.py  test_par_no_comm_fixture.py  test_pytest_parallel_api.py  test_scheduling.py  test_seq.py  test_two_fail_tests_one_proc.py  test_two_fail_tests_two_proc.py  test_two_success_tests_two_procs.py
